--- a/package.json
+++ b/package.json
@@ -9,13 +9,15 @@
   ],
   "main": "src/index.tsx",
   "dependencies": {
+    "@chakra-ui/icons": "1.1.1",
     "@chakra-ui/react": "1.7.4",
     "@emotion/react": "11.7.1",
     "@emotion/styled": "11.6.0",
-    "@types/react-router-dom": "5.3.2",
+    "@types/react-router-dom": "5.1.2",
     "framer-motion": "5.5.6",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-router": "5.1.2",
     "react-router-dom": "5.1.2",
     "react-scripts": "4.0.3"
   },
