--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,11 +3,11 @@
         "./src/**/*"
     ],
     "compilerOptions": {
-        "strict": true,
+        "strict": false,
         "esModuleInterop": true,
         "lib": [
             "dom",
-            "es2015"
+            "es2018"
         ],
         "jsx": "react-jsx"
     }
